# docs/swagger.json
@@ -9,11 +9,6 @@
     "paths": {
         "/user": {
             "post": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
                 "description": "Create new user",
                 "consumes": [
                     "application/json"
@@ -62,7 +57,7 @@
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "OAuth2PasswordBearer": []
                     }
                 ],
                 "description": "Get all users",
@@ -101,11 +96,106 @@
                 }
             }
         },
+        "/user/refresh": {
+            "post": {
+                "description": "Refresh token",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Refresh token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh token",
+                        "name": "refresh_token",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Token"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/token": {
+            "post": {
+                "description": "Get token",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Password",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Token"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/user/{id}": {
             "get": {
                 "security": [
                     {
-                        "Bearer": []
+                        "OAuth2PasswordBearer": []
                     }
                 ],
                 "description": "Get user by id",
@@ -152,7 +242,7 @@
             "delete": {
                 "security": [
                     {
-                        "Bearer": []
+                        "OAuth2PasswordBearer": []
                     }
                 ],
                 "description": "Delete user by id",
@@ -199,6 +289,21 @@
         }
     },
     "definitions": {
+        "model.Token": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "refresh_token": {
+                    "type": "string"
+                },
+                "token_type": {
+                    "type": "string",
+                    "example": "bearer"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -271,11 +376,14 @@
         }
     },
     "securityDefinitions": {
-        "Bearer": {
-            "description": "Type \"Bearer\" followed by a space and JWT token.",
-            "type": "apiKey",
-            "name": "Authorization",
-            "in": "header"
+        "OAuth2PasswordBearer": {
+            "type": "oauth2",
+            "flow": "password",
+            "tokenUrl": "/user/token",
+            "scopes": {
+                "read": "Grants read access",
+                "write": "Grants write access"
+            }
         }
     }
 }
