# internal/model/token.go
@@ -1,0 +1,7 @@
+package model
+
+type Token struct {
+	RefreshToken string `json:"refresh_token"`
+	AccessToken  string `json:"access_token"`
+	TokenType    string `json:"token_type" example:"bearer"`
+}
